servicenow/6.5/modules/ROOT/pages/index.adoc
= ServiceNow Connector - Mule 4

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

ServiceNow Connector Version 6.6

Anypoint Connector for ServiceNow (ServiceNow Connector) provides connections between Mule runtime engine (Mule) and ServiceNow apps.
Use the ServiceNow operations with the custom ServiceNow tables, along with any operations available through the installed plugins.

For compatibility information and fixed issues, see the xref:release-notes::connector/servicenow-connector-release-notes-mule-4.adoc[ServiceNow Connector Release Notes].

== Before You Begin

To use this connector, you must be familiar with:

* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements in a Mule flow and global elements
* How to create a Mule app using Design Center or Anypoint Studio

Before creating an app, you must have access to the ServiceNow target resource and Anypoint Platform.


== Audience

* Starting user
+
To create your Mule app,
see xref:servicenow-connector-studio.adoc[Studio Configuration].
* Power user
+
Read the xref:servicenow-connector-xml-maven.adoc[XML and Maven Support]
and xref:servicenow-connector-examples.adoc[Examples] topics.
The Examples topic provides one or more use cases for using the connector.

== Common Use Cases For the Connector

ServiceNow Connector enables organizations to fully integrate business processes across HR, legal, procurement, operations, marketing, and facilities departments.
Creating connectivity within and outside the enterprise is quick and simple with connectivity to over 120 Anypoint connectors.

Use ServiceNow Connector to create instant API connectivity with the ServiceNow API, and quickly and easily interface with ServiceNow from within Anypoint Platform.


xref:servicenow-connector-examples.adoc[Example] use cases includes getting a ServiceNow incident record.

== Connection Types

The following authentication types are supported:

* Basic
* OAuth 2.0 Authorization Code

=== Limitations

* OAuth 2.0 Authorization Code authentication works only with the following versions of Mule:
** 4.1.5
** 4.2.1 and later
* Metadata does not work with OAuth 2.0 Authorization Code authentication.


== Use Exchange Templates and Examples

https://www.mulesoft.com/exchange/[Anypoint Exchange] provides templates
you can use as a starting point for your app, as well as examples that illustrate a complete solution.

* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker-bidirectional-sync[Workday and ServiceNow Worker Bidirectional Sync]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-workerservicerequest-migration/[Workday Worker to ServiceNow Service Request Migration]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-employee-aggregation/[Workday and ServiceNow Employee Aggregation]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker-migration/[Workday to ServiceNow Service Worker Migration]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker2servicerequest-broadcast/[Workday Worker to ServiceNow Service Request Broadcast]



== Next Step

After you complete the prerequisites and experiment with templates and examples, you are ready to create an app with xref:servicenow-connector-studio.adoc[Anypoint Studio].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-use-exchange.adoc[Use Anypoint Exchange to Discover Connectors, Templates, and Examples]
* xref:connectors::introduction/intro-config-use-fd.adoc[Use Flow Designer to Configure a Connector]
* https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-servicenow-connector/[ServiceNow Connector on Exchange]
* https://help.mulesoft.com[MuleSoft Help Center]
